# netpacker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  version.h.in
cmake/: CompileSettings.cmake  GetModuleVersion.cmake  MakeVersionFile.cmake
examples/: CMakeLists.txt  run.cpp  run2.cpp
include/netpacker/: byteorder.h  error.h  get.h  netpacker.h  put.h  skip.h
src/: test.cpp
tests/: CMakeLists.txt  test_get_init.cpp  test_get_main.cpp
